# shalink

./: .gitignore  .releaserc.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  chunk.go  client.go  connect.go  count.go  data.go  go.mod  go.sum  guest.go  in.go  income.go  input.go  link.go  main.c  open.go  out.go  output.go  packet.go  read.go  statistic.go  synchro.go  task.go  terminal.go
C/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  main.c
C/src/: channel.c  channel.h  chunk.h  frame.c  frame.h  guest.c  guest.h  interop.h  link.c  link.h  linkInput.c  linkOpen.c  linkOutput.c  pack.c  pack.h  packet.h  pool.c  pool.h  queue.h  statistic.h  sync.c  terminal.c  terminal.h  terminalGet.c  terminalInput.c  terminalOutput.c  tms.c  tms.h
go/: chunk.go  connect.go  input.go  output.go  packet.go  terminal.go
main/: main.go
shago/: shago.go
src/: channel.c  channel.h  chunk.c  chunk.h  guest.c  guest.h  interop.h  io.c  link.c  link.h  linkInput.c  linkOpen.c  linkOutput.c  open.c  output.c  packet.c  packet.h  pool.c  pool.h  queue.c  queue.h  send.c  statistic.h  sync.c  sync.h  terminal.c  terminal.h  terminalGet.c  terminalHole.c  terminalInput.c  terminalLink.c  terminalOutput.c  terminalPacket.c  terminalSend.c  tms.c  tms.h
test/: main.c
